--- a/sec/1_intro.tex
+++ b/sec/1_intro.tex
@@ -46,7 +46,7 @@ where \(S\) is the usual fixed sampling grid (e.g.\ a \(3\times3\) neighborhood)
 
 \begin{figure}
     \centering
-    \includegraphics[width=1.0\linewidth]{author-kit-CVPR2025-v3.1-latex-/pics/ric_sample.png}
+    \includegraphics[width=1.0\linewidth]{pics/ric_sample.png}
     \caption{Two sets of sampling points used for calculating $\Phi_C$ and $\Phi_{\mathrm{RIC}-C}$, respectively. It is clear that $Q_\alpha\in\mathcal T$ can be regarded as the corresponding point of $P_\alpha\in\mathcal S$, where $\alpha=0,1,2,\dots,4n^2+4n$.}
     \label{fig:ric_sample}
 \end{figure}
