--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@ FUNG, Hei Yuen\\
 {\tt\small hyfungaj@connect.ust.hk}
 \and
 HE, Ka Sing\\
-{\tt\small @connect.ust.hk}
+{\tt\small ksheaa@connect.ust.hk}
 }
 
 
