--- a/main.tex
+++ b/main.tex
@@ -48,9 +48,9 @@ HE, Ka Sing\\
 \begin{document}
 \maketitle
 \input{sec/0_abstract}    
-% \input{sec/1_intro}
-% \input{sec/2_formatting}
-% \input{sec/3_finalcopy}
+\input{sec/1_intro}
+\input{sec/2_formatting}
+\input{sec/3_finalcopy}
 {
     \small
     \bibliographystyle{ieeenat_fullname}
