--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -16,6 +16,8 @@ Similarly, when an unrotated image is passed through an RIC-CNN, examples like l
 \\ \\
 Therefore, in this approach, we take the prediction with the highest confidence score from either the CNN or the RIC-CNN to be the output.
 
+\subsubsection{Notation}
+Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image.
 
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
