--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -17,7 +17,7 @@ Similarly, when an unrotated image is passed through an RIC-CNN, examples like l
 Therefore, in this approach, we take the prediction with the highest confidence score from either the CNN or the RIC-CNN to be the output.
 
 \subsubsection{Notation}
-Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\vec{y_c}$
+Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\mathbf{y}_c \in \mathbb{R}^{C_l} = f_c(I, \hat{\theta}_c)$
 
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
