--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -17,7 +17,13 @@ Similarly, when an unrotated image is passed through an RIC-CNN, examples like l
 Therefore, in this approach, we take the prediction with the highest confidence score from either the CNN or the RIC-CNN to be the output.
 
 \subsubsection{Notation}
-Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\mathbf{y}_c \in \mathbb{R}^{C_l} = f_c(I, \hat{\theta}_c)$ and $\mathbf{y}_r \in \mathbb{R}^{C_l} = f_r(I, \hat{\theta}_r)$, where $\mathbf{y}_c$ and $\mathbf{y}_r$ are the prediction logits of the standard CNN $f_c$ and RIC-CNN $f_r$ respectively, with their corresponding weights $\hat{\theta}_c$ and $\hat{\theta}_r$.
+Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\mathbf{y}_c \in \mathbb{R}^{C_l} = f_c(I, \hat{\theta}_c)$ and $\mathbf{y}_r \in \mathbb{R}^{C_l} = f_r(I, \hat{\theta}_r)$, where $\mathbf{y}_c$ and $\mathbf{y}_r$ are the prediction logits of the standard CNN $f_c$ and RIC-CNN $f_r$ respectively, where $C_l$ is the number of labels of the dataset of the classification task, with their corresponding weights $\hat{\theta}_c$ and $\hat{\theta}_r$.
+
+\subsubsection{Independent Branch Training}
+Both standard CNN branch and RIC-CNN branch are trained independently with the combined loss function
+$$
+\mathcal{L} = \mathcal{L}_CE(\sigma_s(\mathbf{y}_c), \mathbf{y}) + \mathcal{L}_CE(\sigma_s(\mathbf{y}_r), \mathbf{y})
+$$
 
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
