--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -22,8 +22,9 @@ Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\mathbf{y}_c \
 \subsubsection{Independent Branch Training}
 Both standard CNN branch and RIC-CNN branch are trained independently with the combined loss function
 $$
-\mathcal{L} = \mathcal{L}_CE(\sigma_s(\mathbf{y}_c), \mathbf{y}) + \mathcal{L}_CE(\sigma_s(\mathbf{y}_r), \mathbf{y})
+\mathcal{L} = \mathcal{L}_{CE}(\sigma_s(\mathbf{y}_c), \mathbf{y}) + \mathcal{L}_{CE}(\sigma_s(\mathbf{y}_r), \mathbf{y})
 $$
+where $\mathcal{L}_{CE}$ denote the cross-entropy loss function, $\sigma_s$ denote the softmax function 
 
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
