--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -20,12 +20,13 @@ Therefore, in this approach, we take the prediction with the highest confidence 
 Let $I \in \mathbb{R}^{H \times W \times C}$ be the input image, $\mathbf{y}_c \in \mathbb{R}^{C_l} = f_c(I, \hat{\theta}_c)$ and $\mathbf{y}_r \in \mathbb{R}^{C_l} = f_r(I, \hat{\theta}_r)$, where $\mathbf{y}_c$ and $\mathbf{y}_r$ are the prediction logits of the standard CNN $f_c$ and RIC-CNN $f_r$ respectively, where $C_l$ is the number of labels of the dataset of the classification task, with their corresponding weights $\hat{\theta}_c$ and $\hat{\theta}_r$.
 
 \subsubsection{Independent Branch Training}
-Both standard CNN branch and RIC-CNN branch are trained independently with the combined loss function
+Both standard CNN branch and RIC-CNN branch are trained independently using the same datasets at the same time with the combined loss function
 $$
 \mathcal{L} = \mathcal{L}_{CE}(\sigma_s(\mathbf{y}_c), \mathbf{y}) + \mathcal{L}_{CE}(\sigma_s(\mathbf{y}_r), \mathbf{y})
 $$
 where $\mathcal{L}_{CE}$ denote the cross-entropy loss function, $\sigma_s$ denote the softmax function, and $\mathbf{y} \in \mathbb{R}^{C_l}$ is the one-hot representation of the ground truth label.
-
+\\ \\
+The \textit{Take Best Confidence} will not be used in the training stage to prevent training collapse to one model as only one branch of the model will the gradient of the loss flows through after taking maximum on confidence scores between the two.
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
 
