--- a/sec/2_formatting.tex
+++ b/sec/2_formatting.tex
@@ -37,7 +37,7 @@ $$
 $$
 \mathbf{c}_j = \sigma_s(\mathbf{y}_j),\ j \in \{c, r\}
 $$
-By comparing the elementwise maximum of the confidence scores by the two branches and taking the argmax of the two, we greedly get the desired class that has the global maximum confidence given by the two branches. This helps to find the most probable class label in both the situations that either an unrotated image or a rotated image has been given.
+By comparing the elementwise maximum of the confidence scores by the two branches and taking the argmax of the two, we greedily select the desired class that has the global maximum confidence given by the two branches. This helps to find the most probable class label in both the said situations, either an unrotated image or a rotated image has been given.
 %-------------------------------------------------------------------------
 \subsection{Feature Fusion}
 
